examples/test/testpolicy19867.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19867
  namespace: namespace398
spec:
  podSelector:
    matchLabels:
      key29: value34
      key35: value6
      key11: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value43
          key46: value48
          key36: value31
      podSelector:
        matchLabels:
          key30: value4
          key23: value33
